--- a/views/views2.erb
+++ b/views/views2.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>緊急速報画面</title>
+<title>Early Warning</title>
 <link href="style.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 img.ex1 {
@@ -32,14 +32,14 @@ window.onload = function() {
 <form name="form1">
 <div id="out"><!-- 外周 -->
 <div id="head">
-<h1>緊急速報画面</h1>
+<h1>Early Warning</h1>
 </div><!-- head -->
 
 <div id="main">
 
 	<div id="right"><!-- 本文 -->
-	<h2>緊急速報</h2>
-　　　　<div class = "tex1"><緊急速報受信中></div>
+	<h2>Early Warning</h2>
+　　　　<div class = "tex1"><Early Warning Receiving></div>
         <div><span class="blinking"><img src="image/kumo.png"></img></span></div>
         <div id="news"></div>
         <!--<iframe  scrolling="no" frameborder="no" src="./aaa.html" width="400px" height="350px"></iframe>-->
@@ -50,7 +50,7 @@ window.onload = function() {
 
 	<div id="left"><!-- サイドメニュー部分 -->
 	<ul>
-	<li><a href="/">前の画面に戻る</a></li>
+	<li><a href="/">Back</a></li>
 	</ul>
 	</div><!-- left -->
 
