--- a/views/views2.erb
+++ b/views/views2.erb
@@ -41,7 +41,7 @@ window.onload = function() {
 	<h2>Early Warning</h2>
 　　　　<div class = "tex1"><Early Warning Receiving></div>
         <div class = "tex2"><flood warning　Ready to evacuate></div>
-        <div><span class="blinking"><img src="image/kumo.png"></img></span></div>
+        <div><span class="blinking"><img style="zoom:3;" src="image/kumo.png"></img></span></div>
         <div id="news"></div>
         <!--<iframe  scrolling="no" frameborder="no" src="./aaa.html" width="400px" height="350px"></iframe>-->
 	</div><!-- right -->
