--- a/views/views1.erb
+++ b/views/views1.erb
@@ -62,7 +62,7 @@ window.location.href = listURL[mySelect];
         <option value="Sukang">Sukang</option>
         <option value="PekanTutong">Pekan Tutong</option>
         </select>
-        <button type="button" name="jump" value="jump" onclick="checkSelect();">Early Warning</button>
+        <button type="button" name="jump" value="jump" onclick="checkSelect();">PUSH</button>
 
 	</div><!-- right -->
 
