--- a/views/views1.erb
+++ b/views/views1.erb
@@ -45,13 +45,13 @@ window.location.href = listURL[mySelect];
 <form name="form1">
 <div id="out"><!-- 外周 -->
 <div id="head">
-<h1>Call emergency page</h1>
+<h1>Early Warning</h1>
 </div><!-- head -->
 
 <div id="main">
 
 	<div id="right"><!-- 本文 -->
-	<h2>Call emergency page</h2>
+	<h2>Early Warning</h2>
         <!--<iframe  scrolling="no" frameborder="no" src="./aaa.html" width="400px" height="350px"></iframe>-->
         <select name="select">
         <option value="BandarSeriBegawan">Bandar Seri Begawan</option>
